--- a/index.html
+++ b/index.html
@@ -11,33 +11,52 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&family=Noto+Serif+KR:wght@300;500;900&family=Noto+Serif+TC:wght@200&display=swap" rel="stylesheet">    
     
     <style>
         h1{
             font-family: 'Noto Serif TC', serif;
             font-weight: 400;
-            font-size: 150px;
+            font-size: 120px;
         }
-        .hanja{
+        .han{
             font-family: 'Noto Serif TC', serif;
             font-weight: 400;
-            font-size: 120px;
+            font-size: 100px;
+        }
+        .t{
+            font-family: 'Noto Serif KR', serif;
+            font-weight: 400;
+            font-size: 20px;
         }
     </style>
 </head>
 
 <body>
+    <div class="container">
 
-    <h1> 不惜</h1>
+    <!-- <h1><素女經></h1> -->
 
-    <div class="hanja">
-        接而不射    
-    </div>
+    <p class="han">接而不射</p>
+    <p class="t">접이불사는 끝이 없다</p><br>
 
-    <div class="hanja">
-        就弱疑義强
-    </div>
+    <p class="han"> 觸而不泄</p>
+    <p class="t">부하가 걸린 상태에서 버티다.</p>
+    <p class="t">아울러 시간을 길게 지속시킨다.</p>
+    <p class="t">이런류의 방법으로 하는 것은 모두가 지극히 높은 지혜인 것이다.</p><br>
 
+    <p class="han">死往生還</p>
+    <p class="han">就弱疑義强</p>
+    <p class="t">약함을 의심하나 뜻은 강하다</p><br>
+
+    <p class="han">不惜</p>
+    <p class="t">남녀교합은 아끼지 말아야 생식능력 있는 몸을 이루어, 바른 형상을 하늘과 땅이 서로가 이루는 것이다.</p>
+    <p class="t">천지가 서로 도우고 배합하는데 적응해야만 재능이 영원히 생존해서 그치지 않고 끝이 없기 때문이다.</p><br>
+
+    <p class="han">瞥蛇</p>
+    <p class="t">남자의 그것은 만약 정상으로 교합하지 않으면, 곧 밟힌 뱀형상이 된다.</p><br>
+
+    </div>    
 </body>
 
 <!-- Bootstrap JS Bundle with Popper -->
