--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
     <p class="han">瞥蛇</p>
     <p class="t">남자의 그것은 만약 정상으로 교합하지 않으면, 곧 밟힌 뱀형상이 된다.</p><br>
 
+    <p class="han">春宵一刻値千金</p>
+    <p class="t">짧은 봄밤의 시간(時間)은 천금(千金)의 값이 있는 것처럼 느껴짐..</p><br>
+    
+
     </div>    
 </body>
 
